After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659038 - gnome-screenshot segfaults at start in some locales
gnome-screenshot segfaults at start in some locales
Status: RESOLVED FIXED
Product: gnome-utils
Classification: Deprecated
Component: screenshot
trunk
Other Linux
: Normal normal
: ---
Assigned To: gnome-utils Maintainers
gnome-utils Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-14 12:03 UTC by Frederic Peters
Modified: 2011-09-14 21:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-screenshot: Don't translate the timestamp in the filename (1.09 KB, patch)
2011-09-14 16:21 UTC, Matthias Clasen
accepted-commit_now Details | Review

Description Frederic Peters 2011-09-14 12:03:07 UTC
In French, with dates formatted as dd/mm/yyyy, a filename would look like "Capture du 14/09/2011 13:58:34.png" and the presence of slashes brings a segfault.

Program received signal SIGSEGV, Segmentation fault.

Thread 140737225729792 (LWP 22021)

  • #0 g_build_path_va
    at gfileutils.c line 1592
  • #1 g_build_filename
    at gfileutils.c line 1907
  • #2 build_uri
    at gnome-screenshot.c line 1025
  • #3 try_check_file
    at gnome-screenshot.c line 1045
  • #4 io_job_thread
    at gioscheduler.c line 180
  • #5 g_thread_pool_thread_proxy
    at gthreadpool.c line 319
  • #6 g_thread_create_proxy
    at gthread.c line 1962
  • #7 start_thread
    at pthread_create.c line 304
  • #8 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 112
  • #9 ??

Comment 1 Matthias Clasen 2011-09-14 16:21:43 UTC
Created attachment 196523 [details] [review]
gnome-screenshot: Don't translate the timestamp in the filename

That leads to formats like MM/DD/YYYY, which cause problems in
filenames.
Comment 2 Emmanuele Bassi (:ebassi) 2011-09-14 18:02:21 UTC
Review of attachment 196523 [details] [review]:

looks good to me. I think it warrants a freeze break as well.
Comment 3 Cosimo Cecchi 2011-09-14 18:09:02 UTC
(In reply to comment #2)

> looks good to me. I think it warrants a freeze break as well.

Shouldn't be needed...we're not in hard code freeze yet, and I don't think removing strings counts as a string freeze break.
Comment 4 Matthias Clasen 2011-09-14 21:30:03 UTC
Yeah, I don't see this falling under any freezes we have in effect right now.