gnome-screenshot: Don't translate the timestamp in the filename

That leads to formats like MM/DD/YYYY, which cause problems in
filenames.

https://bugzilla.gnome.org/show_bug.cgi?id=659038